feat(init): init openai
